# floodmap

./: .dockerignore  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLIENT_RENDERING_IMPLEMENTATION.md  CLIENT_SIDE_RENDERING_PRD.md  DEPLOYMENT.md  DEPLOYMENT_NOTES.md  DOCKER_USAGE.md  Dockerfile  Dockerfile.test  E2E_TESTING_SETUP.md  Makefile  NETWORK_OPTIMIZATION_PRD.md  README.md  ROUTE_REDESIGN_PRD.md  compress_elevation_data.py  convert_hgt.py  create_simple_tiles.py  debug_coords.py  debug_flood_overlay.py  debug_vector_tile.py  docker-compose.otel.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  download_nasa_srtm_usa.py  download_nasa_srtm_usa_smart.py  elevation_storage.py  error_handling.py  main.py  otel-config.yaml  process_elevation_usa.py  process_maps_usa.py  pyproject.toml  run_server.py  short_fasthtml_docs.md  (+9 more)
.github/workflows/: ci.yml
AI-Sessions/: 2025-08-26-3dep-elevation-research.md  2025-08-26-elevation-tile-debugging.md
cleanup/: README.md
debug/scripts/: README.md  disable_all_caching.py  fix_ocean_zeros.py
debug/tools/: carmack_debug.py  diagnostic_trace.py  end_to_end_validator.py  run_bug_validation.py
deploy/: data-sync.sh
docs/: AGENTS.md  CLIENT_SIDE_FLOOD_RENDERING_DESIGN.md  DEPLOYMENT.md  DOCKER_USAGE.md  network-profiling-baseline.md
docs/cleanup/: ARCHIVE_INFO.md  E2E_TESTING_SETUP.md  PROJECT_STATE.md  README.md  ROUTE_REDESIGN_PRD.md  WORKING_STATE.md  error_handling.py
docs/runbooks/: analytics.md  cache-busting.md  data-gap-repair.md  prod-ops.md  rendering-pipeline.md
docs/specs/: conus-hand-refactor.md  cube-mvp-epic.md  finished-flood-toy-product.md  flood-sandbox-tier3-lab.md  floodmap-growth-roadmap.md  gate-10-ornl-reference-validation.md  hand-mvp-next-steps.md  houston-pilot.md  ornl-hand-national-phase.md  real-terrain-3d-product.md  water-toy-mvp.md
experimental/: elevation_loader_optimized.py  tiles_optimized.py
flood-map-v2/: generate_test_tiles.py
flood-map-v2/api/: __init__.py  color_mapping.py  elevation_loader.py  main.py  persistent_elevation_cache.py  tile_cache.py
flood-map-v2/tests/: test_frontend_e2e.py  test_new_architecture.py
flood-map-v2/web/: index.html
scripts/: api.py  audit_srtm_coverage.py  audit_tile_coverage.py  check_production_coverage.py  color_ramp.txt  coords_to_srtm.py  cube-review-up.sh  download_aws_dem.py  downloader.py  expand_coverage.py  fast_transfer.sh  filters.py  find_missing_elevation.py  inventory_missing_elevation.py  m2m.py  parallel_transfer.sh  process_tif.py  process_usa_complete.py  transfer_mbtiles.sh  transfer_single.sh  ultimate_transfer.sh  ultra_parallel_transfer.sh  update_tileserver_config.py  validate_tiles.py
src/: process_elevation_usa.py  process_maps_usa.py
src/api/: __init__.py  color_mapping.py  config.py  elevation_loader.py  error_handling.py  http_client.py  location_catalog.py  main.py  page_renderer.py  persistent_elevation_cache.py  predictive_preloader.py  sitemaps.py  terrain.py  terrain_cache.py  terrain_cog.py  terrain_manifest.py  tile_cache.py
src/web/: drainage-lab.html  index.html  sim-lab.html  terrain-3d.html  test-client.html  test_complete.html  test_slider.html
tests/: conftest.py  run_tests.py  test_coords.py  test_elevation.py  test_elevation_file_integrity.py  test_flood.py  test_integration_complete.py  test_tile_generation_integrity.py  test_validation.py  visual_regression_test.py
tests/debug/: test_maplibre_urls.py  test_systematic_debugging.py
tests/e2e/: conftest.py  test_city_pages.py  test_flood_slider_functionality.py  test_map_functionality.py  test_maplibre_debugging.py  test_network_interception.py  test_permalink_state.py  test_search_functionality.py  test_visual_regression.py  test_zip_pages.py
tests/fixtures/: __init__.py  services.py
tests/integration/: test_e2e_aws.py.disabled  test_pipeline.py  test_pipeline.py.disabled  test_tile_serving.py
tests/performance/: browser_performance_test.py  performance_benchmark.py  profile_running_service.py  run_performance_suite.py  simple_load_test.py  test_zoom_performance.py
tests/security/: test_input_validation.py
tools/: generate_precompressed_elevation_tiles.py  map_product_qa.py  repair_dem_from_skadi.py  terrain_3d_conus_qa.py  terrain_3d_qa.py  validate_precompressed_tiles.py
usgs_api/: downloader.py  m2m.py  run_downloads.py
utils/: color_ramp.txt  download_aws_dem.py  download_regional_maps.py  elevation_validator.py  expand_coverage.py  port_manager.py  process_elevation.py  process_tif.py  srtm_coverage.py  update_tileserver_config.py  validate_tiles.py
(+375 files in other folders)
