[project]
name = "floodmap"
version = "0.1.0"
description = "floodmap based on your location"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "folium>=0.17.0",
    "geopy>=2.4.1",
    "googlemaps>=4.10.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "pyproj>=3.7.0",
    "python-fasthtml>=0.6.9",
    "rasterio>=1.4.1",
    "scipy>=1.14.1",
    "tqdm>=4.66.5",
    "s3fs>=2024.3.1",
    "prometheus-client>=0.20.0",
    "redis>=5.0.4",
]
