[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "floodmap"
version = "0.1.0"
description = "floodmap based on your location"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "folium>=0.17.0",
    "geopy>=2.4.1",
    "googlemaps>=4.10.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "pyproj>=3.7.0",
    "python-fasthtml>=0.6.9",
    "rasterio>=1.4.1",
    "scipy>=1.14.1",
    "tqdm>=4.66.5",
    "s3fs>=2024.3.1",
    "prometheus-client>=0.20.0",
    "redis>=5.0.4",
    "Pillow>=10.3.0",
    "httptools @ git+https://github.com/MagicStack/httptools",
    "cryptography<46",
    "setuptools>=69.0.0",
    "wheel>=0.43.0",
    "playwright>=1.53.0",
    "pytest-playwright>=0.7.0",
    "lz4>=4.4.4",
    "zstandard>=0.23.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
]

[tool.setuptools]
py-modules = ["main"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: integration tests that require external dependencies",
    "aws: tests that require AWS credentials", 
    "external: tests that require external resources like network access",
    "e2e: end-to-end tests using Playwright",
    "visual: visual regression tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
